--- a/Our-team/css/card19.css
+++ b/Our-team/css/card19.css
@@ -5,25 +5,27 @@ html {
 }
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   background-color: #f1f4fb;
   /* overflow-x: hidden; */
 }
 
-.image{
-  width:100%;
+.image {
+  width: 100%;
   height: 350px;
   object-fit: cover;
   object-position: center;
 }
+.image-custom-1 {
+  object-position: bottom !important;
+}
 
 .heading {
-
   color: #142850;
   font-size: 55px;
   position: relative;
   /* top: 2%; */
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   text-transform: uppercase;
   letter-spacing: 5px;
   text-align: center;
@@ -34,14 +36,10 @@ body {
 
 /* / / /////////////////////////// new drop down starts /////////////////// */
 
-
 .year-parent {
   z-index: 0;
   margin: auto;
   float: inline-end;
-
-
-
 }
 
 .year-dropdown {
@@ -82,7 +80,6 @@ body {
   pointer-events: auto;
 }
 
-
 .year-dropdown__selected::before {
   position: absolute;
   content: "";
@@ -110,7 +107,7 @@ body {
 
 .year-dropdown__selected .year-new-text::before {
   position: absolute;
-  content: 'attr(data-text)';
+  content: "attr(data-text)";
   top: 0;
   left: 0;
   width: 100%;
@@ -128,7 +125,6 @@ body {
 }
 
 .year-dropdown__options {
-
   display: block;
   padding: 0;
   margin: 0;
@@ -349,16 +345,9 @@ body {
   }
 }
 
-
-
-
-
-
 /* / / /////////////////////////// new drop down ends /////////////////// */
 
-
 .select .my-dropdown {
-
   text-align: left;
   color: #feffff;
   font-size: 30px;
@@ -375,12 +364,10 @@ body {
   /* position: relative; Enable absolute positioning for children and pseudo elements */
   /* width: 200px;
     padding: 10px; */
-
 }
 
 /* select */
 select {
-
   outline: 0;
   box-shadow: none;
   border: 0 !important;
@@ -404,11 +391,10 @@ select::-ms-expand {
   /* background: #2c3e50; */
   background: transparent;
   overflow: hidden;
-  border-radius: .25em;
+  border-radius: 0.25em;
 }
 
 select {
-
   color: rgb(20, 19, 19);
   cursor: pointer;
 }
@@ -423,7 +409,7 @@ select {
 
 /* Arrow */
 .select::after {
-  content: '\f078';
+  content: "\f078";
   position: absolute;
   top: 0;
   right: 0;
@@ -432,16 +418,15 @@ select {
   background: transparent;
   cursor: pointer;
   pointer-events: none;
-  -webkit-transition: .25s all ease;
-  -o-transition: .25s all ease;
-  transition: .25s all ease;
+  -webkit-transition: 0.25s all ease;
+  -o-transition: 0.25s all ease;
+  transition: 0.25s all ease;
 }
 
 /* Transition on select*/
 .select:hover::after {
   /* color: #f39c12; */
   color: #feffff;
-
 }
 
 option {
@@ -488,7 +473,6 @@ option {
   border: 2px solid #d1ddf4;
   color: #f1fbf4;
 }
-
 
 .tab .tablinks:hover .line-1 {
   animation: move1 1500ms infinite ease;
@@ -635,13 +619,11 @@ option {
   display: none;
   padding: 50px 12px;
   /* top: -20%; */
-
 }
 
 .teamTitle {
   /* top: -10%; */
   margin-bottom: 5vw;
-
 }
 
 .teamTitle h1 {
@@ -684,10 +666,8 @@ option {
   height: 100%;
   z-index: 2;
   background-color: #000;
-  transition: .5s;
+  transition: 0.5s;
 }
-
-
 
 /* .card:hover .card-image {
   transform: translateY(-100px);
@@ -745,7 +725,7 @@ option {
   color: #fff;
   font-weight: 400;
   /* margin: 0 6px; */
-  transition: .2s;
+  transition: 0.2s;
   transform: translateY(200px);
   opacity: 00;
 }
@@ -772,7 +752,7 @@ option {
   color: #fff;
   font-weight: bold;
   /* margin: 0 6px; */
-  transition: .2s;
+  transition: 0.2s;
   transform: translateY(200px);
   opacity: 00;
 }
@@ -798,9 +778,7 @@ option {
   animation: bounce 1s;
 }
 
-
 @-webkit-keyframes bounce {
-
   0%,
   20%,
   53%,
@@ -833,7 +811,6 @@ option {
 }
 
 @keyframes bounce {
-
   0%,
   20%,
   53%,
@@ -865,17 +842,15 @@ option {
   }
 }
 
-
 .card:hover .social-icons li h2 {
   transform: translateY(0px);
   opacity: 1;
 }
 
-
 .social-icons li a:hover {
   /* background: #142850; */
   /* border-color: #fff; */
-  transition: .3s;
+  transition: 0.3s;
 }
 
 /* .social-icons li h2:hover {
@@ -893,7 +868,7 @@ option {
 }
 
 .social-icons li a .fab {
-  transition: .8s;
+  transition: 0.8s;
 }
 
 .social-icons li a .fab:hover {
@@ -933,9 +908,8 @@ option {
   font-size: 1.5vw;
   /* line-height: 2.5vw; */
   color: #f1f4fb;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: 400;
-
 }
 
 .details h2 {
@@ -943,8 +917,6 @@ option {
   padding: 20px 0;
   width: 100%;
 }
-
-
 
 .brdr {
   border: 2px solid yellow;
@@ -960,24 +932,17 @@ option {
   margin-bottom: 80px;
 }
 
-
-@media screen and (min-width:320px) and (max-width:640px) {
-
-
+@media screen and (min-width: 320px) and (max-width: 640px) {
   .heading {
     left: auto;
     margin-right: 2px;
     font-size: 30px;
     letter-spacing: 1px;
-
   }
 
   .image {
     width: 230px;
   }
-
- 
-
 
   #nomargin {
     margin-top: 0%;
@@ -996,14 +961,9 @@ option {
     /* left: 80px; */
     font-size: 14px;
     width: 100%;
-
-
   }
 
-
-
   /* vwove IE arrow */
-
 
   /* Custom Select */
   .select {
@@ -1015,20 +975,17 @@ option {
     /* background: #2c3e50; */
     background: transparent;
     overflow: hidden;
-    border-radius: .25em;
+    border-radius: 0.25em;
   }
 
   select {
-
     color: #142850;
     cursor: pointer;
   }
 
-
-
   /* Arrow */
   .select::after {
-    content: '\f078';
+    content: "\f078";
     position: absolute;
 
     right: 0;
@@ -1037,16 +994,15 @@ option {
     background: transparent;
     cursor: pointer;
     pointer-events: none;
-    -webkit-transition: .25s all ease;
-    -o-transition: .25s all ease;
-    transition: .25s all ease;
+    -webkit-transition: 0.25s all ease;
+    -o-transition: 0.25s all ease;
+    transition: 0.25s all ease;
   }
 
   /* Transition on select*/
   .select:hover::after {
     /* color: #f39c12; */
     color: #feffff;
-
   }
 
   option {
@@ -1054,7 +1010,6 @@ option {
     background: transparent;
     color: #142850;
   }
-
 
   .tab {
     z-index: 50;
@@ -1140,7 +1095,6 @@ option {
   }
 
   .teamTitle h1 {
-
     font-size: 25px;
     letter-spacing: 1px;
     margin-bottom: 75px;
@@ -1174,21 +1128,19 @@ option {
   }
 
   .details .job-title {
-
     font-size: 20px;
   }
 
   .pos {
-
     margin-top: -50px;
     text-align: center;
     font-size: 4vw;
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
     /* margin-bottom: 80px; */
   }
 }
 
-@media screen and (min-width:769px) and (max-width:1023px) {
+@media screen and (min-width: 769px) and (max-width: 1023px) {
   .heading {
     font-size: 35px;
     letter-spacing: 4px;
@@ -1220,7 +1172,6 @@ option {
   .tab {
     margin-top: 30px;
     text-align: center;
-
 
     /* padding: 5vw; */
   }
@@ -1318,7 +1269,6 @@ option {
   }
 
   .details .job-title {
-
     font-size: 20px;
   }
 
@@ -1326,13 +1276,12 @@ option {
     margin-top: 10px;
     text-align: center;
     font-size: 3vw;
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
     margin-bottom: 80px;
   }
-
 }
 
-@media screen and (min-width:1024px) and (max-width:1439px) {
+@media screen and (min-width: 1024px) and (max-width: 1439px) {
   .heading {
     font-size: 40px;
     letter-spacing: 4px;
@@ -1360,7 +1309,6 @@ option {
     height: 10vw;
     text-align: center;
     padding: 2vw;
-
   }
 
   /* Style the buttons inside the tab */
@@ -1440,7 +1388,6 @@ option {
     margin-top: 10vw;
     font-size: 3.5vw;
     letter-spacing: 4px;
-
   }
 
   .card-wrapper {
@@ -1457,7 +1404,6 @@ option {
   }
 
   .details .job-title {
-
     font-size: 20px;
   }
 
@@ -1465,11 +1411,10 @@ option {
     margin-top: 10px;
     text-align: center;
     font-size: 2vw;
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
     margin-bottom: 30px;
   }
 }
-
 
 .parallax h2 span {
   color: #3b578e;
@@ -1481,7 +1426,6 @@ option {
   height: 100vh;
   width: 100%;
   background-color: #f1f4fb;
-
 }
 
 .Effect {
@@ -1500,31 +1444,27 @@ option {
   letter-spacing: 0.2em;
 }
 
-@media screen and (min-width:320px) and (max-width:640px) {
+@media screen and (min-width: 320px) and (max-width: 640px) {
   .parallax {
     height: 100vh;
 
     width: 100%;
 
     background-color: #f1f4fb;
-
   }
 
   h2.Effect {
-
     font-size: 28px;
-
   }
 }
 
-@media screen and (min-width:640px) and (max-width:767px) {
+@media screen and (min-width: 640px) and (max-width: 767px) {
   .parallax {
     height: 100vh;
     margin-top: 30vh;
     width: 100%;
     margin-bottom: 480px;
     background-color: #f1f4fb;
-
   }
 
   h2.Effect {
@@ -1535,7 +1475,6 @@ option {
     height: 6vw;
 
     font-size: 3vw;
-
   }
 
   .tab {
@@ -1555,17 +1494,15 @@ option {
   .tabcontent {
     margin-top: 0;
   }
-
 }
 
-@media screen and (min-width:769px) and (max-width:1024px) {
+@media screen and (min-width: 769px) and (max-width: 1024px) {
   .parallax {
     height: 100vh;
     /* margin-top: 30vh; */
     width: 100%;
     margin-bottom: 150px;
     background-color: #f1f4fb;
-
   }
 
   .Effect {
